--- a/index.html
+++ b/index.html
@@ -35,22 +35,14 @@
           <button class="orbit-next" aria-label="next"><span class="show-for-sr">Next Slide</span>&#9654;</button>
           <li class="orbit-slide is-active">
             <img src="http://placehold.it/1200x450">
-          </li>
-          <li class="orbit-slide">
-            <img src="http://placehold.it/1200x450">
-          </li>
-          <li class="orbit-slide">
-            <img src="http://placehold.it/1200x450">
-          </li>
-          <li class="orbit-slide">
-            <img src="http://placehold.it/1200x450">
+          
           </li>
         </ul>
       </div>
     </div>
 
     <div class="row column text-center">
-      <h1>Changing the World Through Design</h1>
+      <h1>GoodGovUX: Decision Support Tool</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
       <a href="#" class="button large">Learn More</a>
       <a href="#" class="button large hollow">Learn Less</a>
