--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </p>
       </div>
       <div class="large-6 columns">
-        <h4>Varied Audiences</h4>
+        <h4><a href="different_audiences.html">Varied Audiences</a></h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
         <p>Our website serves many different audiences, how do we serve them all?</p>
       </div>
