--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>GoodGovUX| Best Practices and Deliverables </title>
     <link rel="stylesheet" href="css/foundation.css">
   </head>
   <body>
@@ -63,7 +63,7 @@
 
     <div class="row">
       <div class="large-6 columns">
-        <h4>No Budget</h4>
+        <h4><a href="usability_testing.html">Testing With No Budget</a></h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
         <p>We need to do some usability testing for our website but we have no budget.
         </p>
@@ -107,8 +107,8 @@
 
     <div class="row column">
       <ul class="menu">
-        <li><a href="#">One</a></li>
-        <li><a href="#">Two</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Copyright</a></li>
         <li><a href="#">Three</a></li>
         <li><a href="#">Four</a></li>
       </ul>
