--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
 
 <div class="row">
       <div class="large-6 columns">
-        <h4>Low Customer Satisfaction</h4>
+        <h4><a href="journey.html">Abandoning the Journey</a></h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
-        <p>How do we increase our customer satisfaction scores?
+        <p>Users are not completing all the steps in our process.
         </p>
       </div>
       <div class="large-6 columns">
-        <h4>Abandoning the Journey</h4>
+     <h4><a href="customer_satisfaction.html">Low Customer Satisfaction</a></h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
-        <p>Users are not completing all the steps in our process.</p>
+        <p>ow do we increase our customer satisfaction scores?</p>
       </div>
     </div>
 
