--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
       <div class="large-6 columns">
      <h4><a href="customer_satisfaction.html">Low Customer Satisfaction</a></h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
-        <p>ow do we increase our customer satisfaction scores?</p>
+        <p>How do we increase our customer satisfaction scores?</p>
       </div>
     </div>
 
     <div class="row">
       <div class="large-6 columns">
-        <h4>Users Missing Important Content </h4>
+        <h4><a href="content_overlooked.html">Users Missing Important Content</a> </h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
         <p>Some of our most imporant content is being overlooked.
         </p>
       </div>
       <div class="large-6 columns">
-        <h4>Agency-wide Reorganiztion</h4>
+        <h4><a href="reorganization.html">Agency-Wide Reorganization</a></h4>
         <img class="thumbnail" src="http://placehold.it/700x250">
         <p>Our agency has reorganized and we need to restructure content.</p>
       </div>
